--- a/packages/connect-explorer-nextra/src/styles/globals.css
+++ b/packages/connect-explorer-nextra/src/styles/globals.css
@@ -1,13 +1,13 @@
 @font-face {
     font-family: 'TT Satoshi';
-    src: url('../src/fonts/TTSatoshi-Medium.otf') format('opentype');
+    src: url('../fonts/TTSatoshi-Medium.otf') format('opentype');
     font-weight: 500;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'TT Satoshi';
-    src: url('../src/fonts/TTSatoshi-DemiBold.otf') format('opentype');
+    src: url('../fonts/TTSatoshi-DemiBold.otf') format('opentype');
     font-weight: 600;
     font-style: normal;
 }
